--- a/port.css
+++ b/port.css
@@ -64,14 +64,13 @@ button{
 .my-logo{
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 .my-logo img{
     height: 1.8rem;
     width: 1.8rem;
 }
-.my-logo h4{
-    padding: 3px;
+.my-logo a{
     color: var(--opposite-clr--);
     border-bottom: 2px solid var(--opposite-clr--);
 }
@@ -112,7 +111,8 @@ button{
 }
 .myself a{
     padding: 10px;
-    background: blueviolet;
+    background: var(--opposite-clr--);
+    color: var(--primary-bg--);
     height: 3rem;
     width: 18rem;
     border-radius: 10px;
@@ -188,10 +188,6 @@ button{
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-  }
-
-  #github {
-    margin-top: 1rem;
   }
 }
 
@@ -302,7 +298,7 @@ button{
 
   .skill-grid {
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 2rem;
+    gap: 1rem;
   }
 
   .other-skill {
