--- a/port.css
+++ b/port.css
@@ -220,7 +220,7 @@ button{
     align-items: center;
     justify-content: space-around;
 }
-.skills span{
+.skills p{
     font-size: x-large;
     color: var(--primary-clr--);
 }
@@ -312,8 +312,8 @@ button{
     width: 90%;
   }
 
-  .project-name p,.edu-name h2,.edu-name span,.project-desc,.footer-links a {
-    font-size: 1rem;
+  .project-name p,.edu-name h2,.edu-name span,.project-desc,.footer-links a, .project-head span {
+    font-size: larger;
   }
 
   .edu-sec {
@@ -323,8 +323,8 @@ button{
 }
 
 @media (max-width: 768px) {
-  .skills span {
-    font-size: large;
+  .skills p {
+    font-size: larger;
     text-align: center;
     padding: 0 1rem;
   }
@@ -362,7 +362,7 @@ button{
   }
 
   .footer-links {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 1rem;
   }
 
@@ -394,7 +394,7 @@ button{
   .skill-secn {
     width: 95%;
   }
-  .project-head span,
+  .project-head p,
   .edu-head span,
   .event-head span {
     font-size: 1rem;
@@ -403,15 +403,15 @@ button{
 
   .project-name p,
   .edu-name h2 {
-    font-size: 1rem;
+    font-size: larger;
   }
 
   .edu-name span,.edu-name p,.project-name span,.edu-marks {
-    font-size: 0.9rem;
+    font-size: larger;
   }
 
   .project-btns a {
-    font-size: 0.9rem;
+    font-size: larger;
     padding: 4px 6px;
   }
 
@@ -448,7 +448,7 @@ button{
     height: 4rem;
     margin-bottom: 2rem;
 }
-.project-head span{
+.project-head p{
     font-size: x-large;
     color: var(--primary-clr--);
     margin: 0 10px;
@@ -658,7 +658,6 @@ button{
   }
 
   .edu-place {
-    flex-direction: column;
     align-items: flex-start;
   }
 
@@ -772,7 +771,7 @@ button{
     background-color: var(--second-bg--);
     color: var(--primary-clr--);
     padding: 2rem 1rem;
-    /* width: 100vw; */
+    width: 100vw;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -785,7 +784,7 @@ button{
 .footer-links{
     /* margin: 1rem 1rem; */
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 1.5rem;
     font-weight: 700;
@@ -812,7 +811,7 @@ button{
 }
 @media (max-width: 500px) {
     .footer-links {
-        flex-direction: column;
+        /* flex-direction: column; */
         gap: 0.5rem;
     }
 }
@@ -822,7 +821,7 @@ button{
   }
 
   .footer-links {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 0.5rem;
   }
 
@@ -838,10 +837,6 @@ button{
 @media (max-width: 480px) {
   .footer-cont h1 {
     font-size: 1.3rem;
-  }
-
-  .footer-links a {
-    /* font-size: 1.2rem; */
   }
 
   .footer-secn span {
