--- a/port.css
+++ b/port.css
@@ -58,7 +58,7 @@ button{
     justify-content: space-between;
     margin: 0 auto;
     width: 80%;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     z-index: 10;
 }
 .my-logo{
@@ -69,6 +69,12 @@ button{
 .my-logo img{
     height: 1.8rem;
     width: 1.8rem;
+}
+#github{
+  color: violet;
+  padding: 7px;
+  border: 1px solid violet;
+  border-radius: 1rem;
 }
 .my-logo a{
     color: var(--opposite-clr--);
@@ -163,6 +169,7 @@ button{
   .myself p, .myself a {
     text-align: center;
     align-self: center;
+    font-size: large;
   }
 }
 
@@ -273,7 +280,6 @@ button{
     gap: 0.5rem;
     padding: 0.5rem 1rem;
     border-radius: 10px;
-    /* background-color: rgb(3, 26, 36); */
     border: var(--second-clr--) solid 1.4px;
     word-wrap: break-word;
 }
@@ -283,6 +289,7 @@ button{
     cursor: pointer;
 }
 .skill-item span{
+  color: var(--primary-clr--);
     font-size: larger;
     font-weight:bolder ;
 }
@@ -312,10 +319,6 @@ button{
     width: 90%;
   }
 
-  .project-name p,.edu-name h2,.edu-name span,.project-desc,.footer-links a, .project-head span {
-    font-size: larger;
-  }
-
   .edu-sec {
     width: 90%;
     padding: 1.5rem;
@@ -343,10 +346,7 @@ button{
     height: auto;
     padding: 1rem;
   }
-  .project-head h1,.edu-head h1,.event-head h1,.footer-cont h1 {
-    font-size: 1.5rem;
-  }
-
+  
   .project-grid,.edu-grid,.event-grid {
     width: 95%;
     gap: 1.5rem;
@@ -357,12 +357,7 @@ button{
     gap: 10px;
   }
 
-  .project-desc,.edu-desc {
-    font-size: 0.95rem;
-  }
-
   .footer-links {
-    /* flex-direction: column; */
     gap: 1rem;
   }
 
@@ -382,10 +377,6 @@ button{
     width: 2rem;
   }
 
-  .skill-item span {
-    font-size: medium;
-  }
-
   .skill-cont {
     height: auto;
     padding: 2rem 0;
@@ -394,22 +385,7 @@ button{
   .skill-secn {
     width: 95%;
   }
-  .project-head p,
-  .edu-head span,
-  .event-head span {
-    font-size: 1rem;
-    text-align: center;
-  }
-
-  .project-name p,
-  .edu-name h2 {
-    font-size: larger;
-  }
-
-  .edu-name span,.edu-name p,.project-name span,.edu-marks {
-    font-size: larger;
-  }
-
+  
   .project-btns a {
     font-size: larger;
     padding: 4px 6px;
@@ -544,6 +520,10 @@ button{
     gap: 1.5rem;
   }
 
+  .project-head p{
+    font-size: larger;
+  }
+
   .project-name p {
     font-size: large;
   }
@@ -579,7 +559,7 @@ button{
     align-items: center;
     margin-bottom: 2rem;
 }
-.edu-head span{
+.edu-head p{
     font-size: x-large;
     margin: 0 1.5rem;
 }
@@ -661,6 +641,10 @@ button{
     align-items: flex-start;
   }
 
+  .edu-head p{
+    font-size: larger;
+  }
+
   .edu-logo img {
     height: 2.5rem;
     width: 2.5rem;
@@ -704,13 +688,13 @@ button{
     align-items: center;
     flex-direction: column;
 }
-.event-head span{
+.event-head p{
     font-size: x-large;
     margin-bottom: 2rem;
 }
 .event-slide img{
     width: 100%;
-    max-width: 350px; /* Prevents it from becoming too big on large screens */
+    max-width: 350px; 
     height: 250px;
     margin-left: 1.3rem;
     border: 2px solid var(--primary-brdr--);
@@ -727,6 +711,10 @@ button{
         max-width: 250px;
         height: 150px;
     }
+    .event-head p{
+      font-size: larger;
+      text-align: center;
+    }
 }
 
 .event-grid{
@@ -741,7 +729,6 @@ button{
     overflow-x: scroll;
     scrollbar-width: none;
     margin-bottom: 2rem;
-    /* will-change: transform; */
 }
 .slide1{
     animation: scroll-left 30s linear infinite;;
@@ -782,11 +769,10 @@ button{
     color: var(--second-clr--);
 }
 .footer-links{
-    /* margin: 1rem 1rem; */
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 2rem;
     font-weight: 700;
 }
 .footer-secn{
@@ -811,18 +797,12 @@ button{
 }
 @media (max-width: 500px) {
     .footer-links {
-        /* flex-direction: column; */
-        gap: 0.5rem;
+        justify-content: space-around;
     }
 }
 @media (max-width: 768px) {
   .footer-cont h1 {
     font-size: 1.5rem;
-  }
-
-  .footer-links {
-    /* flex-direction: column; */
-    gap: 0.5rem;
   }
 
   .footer-links a {
