--- a/port.css
+++ b/port.css
@@ -193,6 +193,7 @@ button{
     flex-direction: column-reverse;
     align-items: center;
     gap: 2rem;
+    padding-top: 6rem;
   }
 
   .myself {
