--- a/port.css
+++ b/port.css
@@ -212,11 +212,14 @@ button{
 
   .nav {
     display: none;
+    position: absolute;
+    top:4.5rem;
+    right: 2rem;
+    padding: 1rem;
     flex-direction: column;
-    align-items: end;
     gap: 1rem;
-    
-    
+    background: rgba(137, 43, 226, 0.146);
+    transition: all 0.3s ease
   }
   .menu{
     display: block;
