--- a/port.css
+++ b/port.css
@@ -108,13 +108,14 @@ button{
     justify-content: space-between;
     font-size: larger;
     margin-top: 0;
-    padding-top: 8.5rem;
+    padding-top: 9.5rem;
+    padding-bottom: 2rem;
 }
 .myself{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     width: 50%;
     font-family: "Roboto";
 }
@@ -125,6 +126,18 @@ button{
     -webkit-text-fill-color: transparent;
     font-size: 48px;
     font-weight: bold;
+    border-right: 5px solid var(--opposite-clr--);
+    overflow: hidden;
+    font-size: 2.72rem;
+    white-space: nowrap;
+    animation: typing 3.5s steps(30, end) alternate infinite, blink-carpet  0.5s step-end infinite;
+}
+@keyframes typing {
+  from{width:0}
+  to {width: 100%}
+}@keyframes blink-carpet{
+  from, to {border-color: transparent}
+  50% {border-color: var(--opposite-clr--)}
 }
 .myself p{
     color:  var(--primary-clr--);
@@ -235,7 +248,7 @@ button{
 
 @media (max-width: 480px) {
   .myself h2 {
-    font-size: 28px;
+    font-size: 24px;
     text-align: center;
   }
 
