--- a/port.css
+++ b/port.css
@@ -54,7 +54,7 @@ button{
     background: none;
 }
 .head{
-  height: 4rem;
+    height: 4rem;
     font-size: larger;
     font-weight: 600;
     display: flex;
@@ -73,6 +73,7 @@ button{
 .my-logo img{
     height: 1.8rem;
     width: 1.8rem;
+    user-select: none;
 }
 #github{
   color: violet;
@@ -111,7 +112,7 @@ button{
     justify-content: space-between;
     font-size: larger;
     margin-top: 0;
-    padding-top: 9.5rem;
+    padding-top: 8.5rem;
     padding-bottom: 2rem;
 }
 .myself{
@@ -121,6 +122,7 @@ button{
     gap: 1.5rem;
     width: 50%;
     font-family: "Roboto";
+
 }
 .myself h2{
     /* background: linear-gradient(to right, var(--second-clr--), var(--opposite-clr--), var(--primary-brdr--)); */
@@ -134,6 +136,7 @@ button{
     font-size: 2.72rem;
     white-space: nowrap;
     animation: typing 3.5s steps(30, end) alternate infinite, blink-carpet  0.5s step-end infinite;
+    user-select: none;
 }
 @keyframes typing {
   from{width:0}
@@ -147,6 +150,7 @@ button{
     font-size: larger;
     font-weight: 600;
     margin-bottom: 1rem;
+    user-select: none;
 }
 .myself a{
     padding: 10px;
@@ -171,12 +175,17 @@ button{
     width: 25rem;
     border-radius: 50%;
     border: 3px solid var(--second-clr--);
+    animation: load 30s linear infinite;
+}
+@keyframes load{
+  border-bottom: red;
+}
+.my-img img:hover{
 }
 
 .my-img{
     border-radius: 50%;
 }
-
 
 /* responsive */
 
@@ -260,9 +269,15 @@ button{
     width: 100vw;
     margin: 0 auto;
   }
+  .myself{
+    gap: 1rem;
+  }
   .myself h2 {
     font-size: 24px;
     text-align: center;
+  }
+  .myself h1{
+    font-size: 2rem;
   }
   .head{
     justify-content: space-between;
@@ -313,7 +328,7 @@ button{
     justify-content: center;
     padding: 1rem;
     gap: 2rem;
-    
+    user-select: none;
 }
 .skill-grid img{
     height: 2.5rem;
@@ -337,6 +352,7 @@ button{
     grid-template-columns: repeat(2, 1fr);
     box-sizing: border-box;
     gap: 1rem;
+    user-select: none;
 }
 .other-skill{
     grid-template-columns: repeat(1, 1fr);
@@ -349,6 +365,7 @@ button{
     border-radius: 10px;
     border: var(--second-clr--) solid 1.4px;
     word-wrap: break-word;
+    user-select: none;
 }
 .skill-item:hover, .skill-item span:hover{
     background-color: var(--primary-hover--);
@@ -503,6 +520,7 @@ button{
     width: 80%;
     margin: 0 auto;
     margin-bottom: 3rem;
+    user-select: none;
 }
 .project-secn{
     background-color: var(--second-bg--);
@@ -516,7 +534,6 @@ button{
     box-shadow: var(--primary-brdr--) 0px 0px 12px 1px;
     margin-bottom: 2rem;
     cursor: pointer;
-    margin-left: 10px;
 }
 .project-secn:hover{
     transform: scale(1.09);
@@ -636,6 +653,7 @@ button{
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    user-select: none;
 }
 .edu-logo img{
     height: 3rem;
