--- a/port.css
+++ b/port.css
@@ -108,7 +108,6 @@ button{
     margin: 0 auto;
     width: 80%;
     display: flex;
-    justify-content: space-between;
     font-size: larger;
     margin-top: 0;
     padding-top: 7.5rem;
@@ -369,7 +368,7 @@ button{
 }
 .skill-box{
     border: 1px solid var(--primary-brdr--);
-    box-shadow: var(--primary-brdr--) 0px 0px 12px 1px;
+    box-shadow: var(--primary-brdr--) 0px 0px 8px 1px;
     border-radius: 15px;
     padding: 1rem;
     box-sizing: border-box;
@@ -381,7 +380,7 @@ button{
 }
 .skill-grid{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: auto auto;
     box-sizing: border-box;
     gap: 1rem;
     user-select: none;
@@ -409,28 +408,23 @@ button{
     font-size: larger;
     font-weight:bolder ;
 }
+.parent-skill{
+  display: grid;
+  grid-template-columns: auto auto;
+}
 
 /* Responsive Design for Skills Section */
 
 @media (max-width: 1024px) {
   .skill-secn {
-    flex-direction: column;
     width: 90%;
-    align-items: center;
+    justify-content: space-around;
   }
 
   .skill-grid {
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     gap: 1rem;
   }
 
-  .other-skill {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .skill-box {
-    width: 100%;
-  }
   .project-grid,.edu-grid,.event-grid {
     width: 90%;
   }
@@ -448,8 +442,8 @@ button{
     padding: 0 1rem;
   }
 
-  .skill-grid {
-    grid-template-columns: 1fr;
+  .skill-secn{
+    flex-direction: column;
   }
 
   .skill-item {
@@ -496,6 +490,11 @@ button{
   .skill-cont {
     height: auto;
     padding-bottom: 2rem;
+  }
+
+  .skill-item{
+    font-size: 0.8rem;
+    padding: 8px 10px;
   }
 
   .skill-secn {
@@ -547,7 +546,7 @@ button{
 }
 .project-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 3rem;
     width: 80%;
     margin: 0 auto;
@@ -568,9 +567,9 @@ button{
     cursor: pointer;
 }
 .project-secn:hover{
-    transform: scale(1.09);
-    box-shadow: none;
-    background-color: var(--primary-hover--);
+    transform: scale(1.07);
+    box-shadow: var(--primary-clr--) 0px 0px 12px 1px;
+    background-color: var(--primary-bg--);
 }
 .output-secn img{
     width: 100%;
@@ -632,8 +631,9 @@ button{
 
 @media screen and (max-width: 480px) {
   .project-grid {
-    width: 90%;
+    width: 80%;
     gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
   }
 
   .project-head p{
@@ -677,7 +677,7 @@ button{
 }
 .edu-head p{
     font-size: x-large;
-    margin: 0 1.5rem;
+    margin: 0 1rem;
 }
 .edu-grid{
     width: 70%;
@@ -753,7 +753,7 @@ button{
 
 @media (max-width: 768px) {
   .edu-grid {
-    width: 90%;
+    width: 85%;
   }
 
   .edu-place {
