--- a/port.css
+++ b/port.css
@@ -19,7 +19,7 @@ body.dark-theme{
     --primary-bg--: rgb(2, 3, 32);
     --second-bg--: rgb(6, 41, 56);
     --primary-hover--: rgb(12, 59, 80);
-    --primary-clr--: rgb(156, 150, 150);
+    --primary-clr--: rgb(190, 186, 186);
     --second-clr--: white;
     --primary-brdr--: cyan;
     --opposite-clr--: rgb(243, 182, 129);
@@ -110,6 +110,7 @@ button{
     width: 80%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: larger;
     margin-top: 0;
     padding-top: 7.5rem;
@@ -122,7 +123,7 @@ button{
     gap: 1.5rem;
     width: 50%;
     font-family: "Roboto";
-    animation: fromRight 1s ease forwards;
+    animation: fromRight 1.5s ease forwards;
 }
 .role{
   display: flex;
@@ -157,7 +158,7 @@ button{
     color:  var(--primary-clr--);
     font-size: larger;
     font-weight: 600;
-    margin-bottom: 1rem;
+    margin-bottom: 0.8rem;
     user-select: none;
 }
 .myself a{
@@ -944,4 +945,19 @@ button{
   .footer-secn span {
     font-size: 1rem;
   }
+}
+
+.box {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.6s ease-out;
+}
+
+.box.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.hidden {
+  /* Optional: just for semantic clarity */
 }
